--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
   <!-- user -->
   <link rel="stylesheet" href="./src/scss/main.scss"/>
-  <script src="./src/js/custom.js"></script>
+  <script type="module" src="./src/js/custom.js"></script>
 </head>
 <body>
   <div class="container">
